src/test/ui/associated-types/associated-types-project-from-hrtb-in-fn.stderr
error[E0212]: cannot extract an associated type from a higher-ranked trait bound in this context
  --> $DIR/associated-types-project-from-hrtb-in-fn.rs:11:8
   |
LL |     x: I::A)
   |        ^^^^

error: aborting due to previous error

